chore: update project structure and configuration
- Updated package.json to reflect new build and start scripts, including TypeScript compilation.
- Added tsconfig.json for TypeScript configuration with strict settings and output directory.
- Modified package-lock.json to include new dependencies and updated versions.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,18 @@
   "description": "Interactive Fastify project scaffolder",
   "license": "MIT",
   "bin": {
-    "fastify-new": "./cli.js"
+    "fastify-new": "./dist/cli.js"
   },
   "scripts": {
-    "start": "node cli.js"
+    "build": "tsc",
+    "start": "node dist/cli.js",
+    "dev": "tsx cli.ts",
+    "test": "tsc && node --test dist/cli.test.js",
+    "pretest": "tsc"
+  },
+  "devDependencies": {
+    "@types/node": "^22.19.11",
+    "tsx": "^4.21.0",
+    "typescript": "^5.9.3"
   }
 }
